[gd_scene load_steps=9 format=2]

[ext_resource path="res://NPC/NPC.gd" type="Script" id=1]
[ext_resource path="res://NPC/npc1.png" type="Texture" id=2]
[ext_resource path="res://NPC/npc-drown1.png" type="Texture" id=3]
[ext_resource path="res://NPC/npc-drown2.png" type="Texture" id=4]
[ext_resource path="res://NPC/npc-fall1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "drown",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="GDScript" id=3]

script/source = "extends KinematicBody2D

# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _exit_tree():
	get_parent().queue_free()"

[sub_resource type="CircleShape2D" id=2]


[node name="NPC" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="RayCast2DLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 48 )

[node name="RayCast2DRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 48 )

[node name="RayCast2DLeftLook" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -75, 0 )

[node name="RayCast2DRightLook" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 75, 0 )

[node name="RayCast2DWater" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -10 )
collide_with_areas = true
collide_with_bodies = false

[node name="Area2D" type="KinematicBody2D" parent="."]
collision_layer = 512
collision_mask = 512
script = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

